update: add features

--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "smtp-server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/server.js",
+    "dev": "NODE_ENV=development node src/server.js",
+    "prod": "NODE_ENV=production node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "mailparser": "^3.7.4",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.5",
     "smtp-server": "^3.14.0"
   }
