--- a/.env
+++ b/.env
@@ -3,10 +3,7 @@ NODE_ENV=production
 
 # Server Ports
 SMTP_PORT=2525
-HTTP_PORT=3001
-
-# Authentication
-SMTP_PASSWORD=password
+PORT=3000
 
 # Temp Mail Service Settings
 TEMP_MAIL_DOMAIN=chilaka.online
