--- a/env.example
+++ b/env.example
@@ -3,14 +3,8 @@ NODE_ENV=production
 
 # Server Ports
 SMTP_PORT=2525
-HTTP_PORT=3001
+PORT=3000
 
-# Authentication
-SMTP_PASSWORD=your-secure-password-here
-
-# Security Settings
-ALLOWED_ORIGIN=https://yourdomain.com
 
 # Temp Mail Service Settings
-TEMP_MAIL_DOMAIN=tempmail.local
-w
+TEMP_MAIL_DOMAIN=chilaka.online
